# MaxExp

./: CMakeLists.txt  README.md
cmake/: Find3DSMAX.cmake
src/: ParCenter.cpp  ParGroup.cpp  ParMatrix.cpp  ParObj.cpp  export.cpp  main.cpp  main.def  main.hpp  main.rc  resource.hpp  stdafx.h
src/Base/: Base.hpp  CBlockPar.cpp  CBlockPar.hpp  CBuf.cpp  CException.cpp  CFile.cpp  CFile.hpp  CHeap.cpp  CMain.cpp  Registry.cpp  Registry.hpp  Tracer.cpp  Tracer.hpp  stdafx.h  utils.cpp  utils.hpp
